--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
-button {
+pdf-button {
     height: 30px;
     width: 30px;
+    color: #000;
     outline: none;
     margin: 10px;
     border: none;
     border-radius: 2px;
   }
   
-  button.current {
+  pdf-button.current {
     box-shadow: 0 0 0 2px white,
                 0 0 0 4px black;
   }
